# profitAI

./: README.md  app.py  pyproject.toml  requirements.txt
src/profit_ai/: __init__.py  __main__.py  backtest.py  data.py  i18n.py  indicators.py  insights.py  menu.py  recommendation.py  scanner.py  strategy.py
src/profit_ai_starter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
