[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "profit-ai-starter"
version = "0.1.0"
description = "Educational market analysis and paper trading starter app"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "yfinance>=0.2.40",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
